--- a/menu.html
+++ b/menu.html
@@ -9,7 +9,8 @@
     <div class="menu-items flex-row-center flex-item">
       <a href="index.html" class="menu-index">Overview</a>
       <a href="how_it_works.html" class="menu-widget">How_it_works</a>
-      <a href="https://github.com/yenchiah/project-website-template">GitHub</a>
+      <a href="https://github.com/omule0/MusayiWebsite.github.io">GitHub</a>
+      <a href="https://github.com/omule0/MusayiWebsite.github.io">GitHub</a>
     </div>
   </div>
 </div>
