--- a/menu.html
+++ b/menu.html
@@ -10,7 +10,7 @@
       <a href="index.html" class="menu-index">Overview</a>
       <a href="how_it_works.html" class="menu-widget">How_it_works</a>
       <a href="https://github.com/omule0/MusayiWebsite.github.io">GitHub</a>
-      <a href="https://github.com/omule0/MusayiWebsite.github.io">GitHub</a>
+      <a href="https://github.com/omule0/MusayiWebsite.github.io">APP DATA</a>
     </div>
   </div>
 </div>
