--- a/index.html
+++ b/index.html
@@ -46,13 +46,15 @@
           </div>
           <div class="flex-item flex-column">
             <p class="text text-large">
-              <a target="_blank" href="javascript:void(0)">PAPA JAME BORN EMUSUGUT</a><br>
-              <a target="_blank" href="javascript:void(0)">OMULE MELVIN MICHAEL</a><br>
-              <a target="_blank" href="javascript:void(0)">HISAALU JUNIOR</a><br>
-              <a target="_blank" href="javascript:void(0)">MARVIN SATULO NDYAMANYI</a><br>
-              <a target="_blank" href="javascript:void(0)">JOSELNE</a><br>
-              <a target="_blank" href="javascript:void(0)">MAKERERE UNIVERSITY</a><br>
-              <a target="_blank" href="javascript:void(0)">Kampala, Wandegeya, Uganda</a>
+              <ul>
+                <li>PAPA JAME BORN EMUSUGUT</li>
+                <li>HISAALU JUNIOR</li>
+                <li>OMULE MELVIN MICHAEL</li>
+                <li>JOSELNE </li>
+                <li>MARVIN SATULO NDYAMANYI</li>
+                <li><a target="_blank" href="https://www.mak.ac.ug/">MAKERERE UNIVERSITY</a></li>
+                <li>Kampala, Wandegeya, Uganda</li>
+              </ul>
             </p>
           </div>
         </div>
@@ -61,8 +63,10 @@
             <h2>Problem Statement</h2>
             <hr>
             <p class="text">
-              So many people are losing their lives due to blood shortage in hospitals.
+              <span>So many people are losing their lives due to blood shortage in hospitals.</span> 
             </p>
+            <hr>
+            <h2>Background</h2>
             <p class="text">
               Every year, thousands of Ugandans are affected by severe malaria, bleeding after delivery, sickle cell
               anemia, traffic accidents, and other medical issues that demand blood transfusions. However, only
@@ -78,6 +82,7 @@
               a result of the ongoing Covid 19 crisis, which made blood donation much more difficult owing to the
               inability to travel freely, as well as government limitations imposed to curb the spread of Covid 19.
             </p>
+            <h2>Solution </h2>
             <p class="text">
               While the current blood shortage may not be a new thing in the country,it appears that the issue may
               worsen if no action is taken. For this reason we decided to develop A blood donation app that connects
@@ -92,22 +97,24 @@
               References <a target="_blank"
                 href="https://www.sciencedirect.com/science/article/abs/pii/S0277953621000137"> FOR MORE DETAILS</a>
             <p class="text-small-margin">
-              <h2>HEALTH ADVISE</h2>
-              <h3>Before donating blood</h3>
-              No smoking and drinking. It is important to keep your body and blood clean before you donate. It is a
-              strict rule to not consume or put your body through any kind of drug abuse for 12 hours prior to your
-              blood donation period. The consumption of cigarettes and alcohol also makes your body slightly weak, which
-              can further cause complications while or after your blood donation.
-              <h3>Keep yourself hydrated</h3>
-              The next step to a successful donation is drinking plenty of water. Drinking water is a necessity for all
-              of us, but when you are donating this is even more true. Water hydrates your veins, making them more
-              visible to your phlebotomist and also helps your body recover after donating.
-              <h3>Watch what you eat</h3>
-              Iron is an important mineral your body uses to make hemoglobin. Hemoglobin is responsible for carrying
-              oxygen from your lungs to the rest of your body. Eating a well-balanced diet with plenty of iron-rich
-              foods can help you store extra iron. If you do not have enough iron stored away to make up for the iron
-              you lose when donating blood, you can develop iron deficiency anemia
-            </p>
+              <h2>Health Advise Before donating blood</h2>
+              <ul>
+                <li><h3>No smoking and drinking.</h3></li>
+                <p> It is important to keep your body and blood clean before you donate. It is a
+                  strict rule to not consume or put your body through any kind of drug abuse for 12 hours prior to your
+                  blood donation period. The consumption of cigarettes and alcohol also makes your body slightly weak, which
+                  can further cause complications while or after your blood donation.</p>
+                  <li><h3>Keep yourself hydrated</h3></li>
+                  <p>The next step to a successful donation is drinking plenty of water. Drinking water is a necessity for all
+                    of us, but when you are donating this is even more true. Water hydrates your veins, making them more
+                    visible to your phlebotomist and also helps your body recover after donating.</p>
+                  <li><h3>Watch what you eat</h3></li>
+                  <p>Iron is an important mineral your body uses to make hemoglobin. Hemoglobin is responsible for carrying
+                    oxygen from your lungs to the rest of your body. Eating a well-balanced diet with plenty of iron-rich
+                    foods can help you store extra iron. If you do not have enough iron stored away to make up for the iron
+                    you lose when donating blood, you can develop iron deficiency anemia</p>
+                </p>
+              </ul>
             </p>
           </div>
         </div>
