--- a/how_it_works.html
+++ b/how_it_works.html
@@ -30,24 +30,26 @@
           <div class="flex-item flex-item-stretch flex-column">
             <h2>How the app works</h2>
             <hr>
-            <p class="text-small-margin">
+            <p class="text-justify">
               Install the app onto your mobile devices.
               At the first launch, the app will promt you to login with your google account and password.
               If you already have an account contunie with login, if not create an account wth the MUSAYI APP.
             </p>
-            <p class="text-small-margin">
+            <p class="text-justify">
               Incase you donot have a google account u can use the link blow to get help on how to create one then sign
               up fpr the app<a target="_blank" href='https://support.google.com/accounts/answer/27441?hl=en'> Create
                 Google Account</a>.
               Please only enter corret information because it can lead to lose of lives in case of errors.
             </p>
-            <p class="text-small-margin add-bottom-margin">
+            <p class="text-justify">
               Once the information is entered, SignUp.
               You can now help us save many more lives.
             </p>
           </div>
-          <div class="flex-item flex-item-stretch flex-column">
-            <img class="image" src="img/6.png">
+          <div  class="flex-item flex-item-stretch flex-column">
+            <a href="img/6.png" data-featherlight="image">
+              <img style="float: left; margin: 0px 0px 15px 15px;" src="img/6.png" width="100">
+            </a>
           </div>
         </div>
         </div>
@@ -59,19 +61,21 @@
     <div class="content">
       <div class="content-table flex-column">
         <div class="flex-row">
-          <div class="flex-item flex-item flex-column">
+          <div class="text-justify">
             <h2>When in the app</h2>
             <hr>
-            <p class="text-small-margin">
-            Members of the app can register to become donors. In such acase the following informaton will be required.
+            <p>
+            Members of the app can register to become donors. In such acase the following informaton will be required.<br>
             ✔ name<br>
             ✔ location (wll be automatically detacted)<br>
             ✔ Phone number<br>
             ✔ Blood group and sex<br>
             ✔ Date of birth<br>
             </p>
-            <div class="flex-item flex-column">
-              <img class="image" src="img/5.png">
+            <div  class="flex-item flex-item-stretch flex-column">
+              <a href="img/5.png" data-featherlight="image">
+                <img style=" margin: 0px 0px 15px 15px;" src="img/5.png" width="100">
+              </a>
             </div>
         </div>
         </div>
@@ -82,11 +86,13 @@
       <div class="content-table flex-column">
         <div class="flex-row">
           <div class="flex-item flex-item-stretch flex-column">
-            <p class="text-small-margin">
+            <p class="text-justify">
               In addition, Users can search for registed donors based on their loaction and blood group.
             </p><br>
-            <div class="flex-item flex-item-stretch flex-column">
-              <img class="image" src="img/4.png">
+            <div  class="flex-item flex-item-stretch flex-column">
+              <a href="img/4.png" data-featherlight="image"class="wide">
+                <img style="margin: 0px 0px 15px 15px;" src="img/4.png" width="100">
+              </a>
             </div>
         </div>
         </div>
@@ -99,12 +105,14 @@
       <div class="content-table flex-column">
         <div class="flex-row">
           <div class="flex-item flex-item-stretch flex-column">
-            <p class="text-small-margin add-bottom-margin">
+            <p class="text-justify">
               Users can also request for blood incase of need.
             </p>
           </div>
-          <div class="flex-item flex-item-stretch flex-column">
-            <img class="image" src="img/3.png">
+          <div  class="flex-item flex-item-stretch flex-column">
+            <a href="img/3.png" data-featherlight="image">
+              <img style=" margin: 0px 0px 15px 15px;" src="img/3.png" width="100">
+            </a>
           </div>
         </div>
         </div>
