--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <li>PAPA JAME BORN EMUSUGUT</li>
                 <li>HISAALU JUNIOR</li>
                 <li>OMULE MELVIN MICHAEL</li>
-                <li>JOSELNE </li>
+                <li>NABULYA JOSELYNE</li>
                 <li>MARVIN SATULO NDYAMANYI</li>
                 <li><a target="_blank" href="https://www.mak.ac.ug/">MAKERERE UNIVERSITY</a></li>
                 <li>Kampala, Wandegeya, Uganda</li>
@@ -68,7 +68,7 @@
             <hr>
             <h2>Background</h2>
             <p class="text">
-              Every year, thousands of Ugandans are affected by severe malaria, bleeding after delivery, sickle cell
+              Every year, thousands of Ugandans are affected by severe malaria, women bleeding after delivery, sickle cell
               anemia, traffic accidents, and other medical issues that demand blood transfusions. However, only
               0.3-0.5% of the population gives blood, which is less than half of what the World Health Organization
               recommends for maintaining a sufficient supply in blood banks and health institutions.
@@ -78,7 +78,7 @@
               fatalities as patients lacked access to life-saving transfusions.</span>According to the Red Cross,
               the COVID-19 pandemic has decreased blood donations by about 10% overall and led to frequent
               cancellations of blood drives and staffing shortages. The organization said about 60% of its slots for
-              Indiana donation appointments in the next month are unfilled. This situation did not improve at all as
+              Indiana donation appointments in the next month were unfilled. This situation did not improve at all as
               a result of the ongoing Covid 19 crisis, which made blood donation much more difficult owing to the
               inability to travel freely, as well as government limitations imposed to curb the spread of Covid 19.
             </p>
@@ -86,8 +86,8 @@
             <p class="text">
               While the current blood shortage may not be a new thing in the country,it appears that the issue may
               worsen if no action is taken. For this reason we decided to develop A blood donation app that connects
-              Blood donaors to recipts.This app is aimmed at bridging the gap between the donors and reciptents
-              hence saving more lives and hopefully a nation.
+              Blood donaors to blood recipients.This app is aimmed at bridging the gap between the donors and recipients
+              to sae more lives and hopefully the nation especially in times of life threatening situations that require blood transfusions.
             </p>
             <p class="text">
               Please let us know which aspects are working well and which could be improved via the <a target="_blank"
@@ -96,31 +96,7 @@
               We really appreciate your input!
               References <a target="_blank"
                 href="https://www.sciencedirect.com/science/article/abs/pii/S0277953621000137"> FOR MORE DETAILS</a>
-            <p class="text-small-margin">
-              <h2>Health Advise Before donating blood</h2>
-              <ul>
-                <li><h3>No smoking and drinking.</h3></li>
-                <p> It is important to keep your body and blood clean before you donate. It is a
-                  strict rule to not consume or put your body through any kind of drug abuse for 12 hours prior to your
-                  blood donation period. The consumption of cigarettes and alcohol also makes your body slightly weak, which
-                  can further cause complications while or after your blood donation.</p>
-                  <li><h3>Keep yourself hydrated</h3></li>
-                  <p>The next step to a successful donation is drinking plenty of water. Drinking water is a necessity for all
-                    of us, but when you are donating this is even more true. Water hydrates your veins, making them more
-                    visible to your phlebotomist and also helps your body recover after donating.</p>
-                  <li><h3>Watch what you eat</h3></li>
-                  <p>Iron is an important mineral your body uses to make hemoglobin. Hemoglobin is responsible for carrying
-                    oxygen from your lungs to the rest of your body. Eating a well-balanced diet with plenty of iron-rich
-                    foods can help you store extra iron. If you do not have enough iron stored away to make up for the iron
-                    you lose when donating blood, you can develop iron deficiency anemia</p>
-                </p>
-              </ul>
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+            
 </body>
 
 </html>
