--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
   <div class="menu-container"></div>
   <div class="content-container">
-    <div class="banner" style="background: url('img/1.jpg') no-repeat center; background-size: cover; height: 200px;">
+    <div class="banner" style="background: url('img/1.jpg') no-repeat center; background-size: cover; height: 100px;">
     </div>
     <div class="banner">
       <div class="banner-table flex-column">
@@ -48,7 +48,7 @@
             <p class="text text-large">
               <ul>
                 <li>PAPA JAME BORN EMUSUGUT</li>
-                <li>HISAALU JUNIOR</li>
+                <li>HISAALU JUNIOR NELSON</li>
                 <li>OMULE MELVIN MICHAEL</li>
                 <li>NABULYA JOSELYNE</li>
                 <li>MARVIN SATULO NDYAMANYI</li>
