--- a/menu.html
+++ b/menu.html
@@ -7,10 +7,11 @@
       <img src="img/menu.png">
     </a>
     <div class="menu-items flex-row-center flex-item">
-      <a href="index.html" class="menu-index">Overview</a>
-      <a href="how_it_works.html" class="menu-widget">How_it_works</a>
-      <a href="https://github.com/omule0/MusayiWebsite.github.io">GitHub</a>
-      <a href="APP_DATA/">App_Landing Site</a>
+      <a href="index.html" class="menu-index">OVERVIEW</a>
+      <a href="advice.html" class="menu-index">PRECAUTIONS</a>
+      <a href="how_it_works.html" class="menu-widget">HOW THE APP WORKS</a>
+      <a href="https://github.com/omule0/MusayiWebsite.github.io">GITHUB</a>
+      <a href="APP_DATA/">APP LANDING SITE</a>
     </div>
   </div>
 </div>
