--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
   <div class="menu-container"></div>
   <div class="content-container">
-    <div class="banner" style="background: url('https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.kiu.ac.ug%2Fnews-page.php%3Fi%3Dkiu-law-students-give-back-through-blood-donation&psig=AOvVaw2xbJD1dFWGq8NphDTMK3qJ&ust=1665174179668000&source=images&cd=vfe&ved=0CAwQjRxqFwoTCJjelLS3zPoCFQAAAAAdAAAAABAD') no-repeat center; background-size: cover; height: 200px;">
+    <div class="banner" style="background: url('img/1.jpg') no-repeat center; background-size: cover; height: 200px;">
     </div>
     <div class="banner">
       <div class="banner-table flex-column">
@@ -52,6 +52,7 @@
                 <li>OMULE MELVIN MICHAEL</li>
                 <li>NABULYA JOSELYNE</li>
                 <li>MARVIN SATULO NDYAMANYI</li>
+                
                 <li><a target="_blank" href="https://www.mak.ac.ug/">MAKERERE UNIVERSITY</a></li>
                 <li>Kampala, Wandegeya, Uganda</li>
               </ul>
