--- a/advice.html
+++ b/advice.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html>
+  <head>
+     <!-- Latest compiled and minified CSS -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
+
+<!-- Latest compiled JavaScript -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script> 
+  </head>
 <body>
 
 <p class="text-small-margin">
