--- a/advice.html
+++ b/advice.html
@@ -10,24 +10,62 @@
 <body>
 
 <p class="text-small-margin">
-              <h2>Health Advise Before donating blood</h2>
-              <ul>
-                <li><h3>No smoking and drinking.</h3></li>
-                <p> It is important to keep your body and blood clean before you donate. It is a
-                  strict rule to not consume or put your body through any kind of drug abuse for 12 hours prior to your
-                  blood donation period. The consumption of cigarettes and alcohol also makes your body slightly weak, which
-                  can further cause complications while or after your blood donation.</p>
-                  <li><h3>Keep yourself hydrated</h3></li>
-                  <p>The next step to a successful donation is drinking plenty of water. Drinking water is a necessity for all
-                    of us, but when you are donating this is even more true. Water hydrates your veins, making them more
-                    visible to your phlebotomist and also helps your body recover after donating.</p>
-                  <li><h3>Watch what you eat</h3></li>
-                  <p>Iron is an important mineral your body uses to make hemoglobin. Hemoglobin is responsible for carrying
-                    oxygen from your lungs to the rest of your body. Eating a well-balanced diet with plenty of iron-rich
-                    foods can help you store extra iron. If you do not have enough iron stored away to make up for the iron
-                    you lose when donating blood, you can develop iron deficiency anemia</p>
-                </p>
-              </ul>
+              
+  <h1>
+   <p> WHO CAN DONATE BLOOD ?</p>
+      <ol>
+        <li>Must be in good general health</li>
+        <li>Must be at least 18 years old and no more than 65. After the age of 60, donors require the approval of a transfusion medicine physician</li>
+        <li>Must weight at least 50 kg</li>
+        <li>Must not be at risk of transmitting blood-borne diseases</li>
+        <li><ol>
+          <p>Must have a hemoglobin or hematocrit level of</p>
+          <li>o 13.5-18 g/dl (0.40%) for a man</li>
+          <li>o 12.5-16 g/dl (0.38%) for a woman</li>
+          </ol>
+        </li>
+        <li>Must have a systolic blood pressure of 100-140 mmHg and a diastolic blood pressure of 60-90 mmHg</li>
+        <li>Must have a pulse rate of 60-100 bpm (beats per minute)</li>
+        <li>Must have a temperature below 37.6°C</li>
+        <li>Must have a platelet count above 150x109/L</li>
+    </ol>
+  </h1>
+  
+  <h2>
+    <p> WHO IS LIKELY NOT ELIGIBLE TO DONATE BLOOD ?</p>
+    <ol>
+        <li>You have ever taken drugs</li>
+        <li>Your partner takes drugs</li>
+        <li>You are HIV positive</li>
+        <li>You are a male who had sexual contacts with another male</li>
+        <li>Your partner is HIV positive</li>
+        <li>You have more than one sexual partner</li>
+        <li>You think your partner has risky sex</li>
+    </ol>
+  </h2>
+  
+  <h3>
+    <p> WAIT FOR 6 MONTHS IF....</p>
+    <ol>
+        <li>You have casual partners</li>
+        <li>You have changed sexual partners</li>
+    </ol>
+  </h3>
+  
+  <h4>
+    <p>WAIT FOR 12 MONTHS IF......</p>
+    <ol>
+     <li>After a tattoo or ear/body piercing</li>
+    <li>After a scarification (except if therapeutic)</li>
+    <li>If you have undergone an acupuncture treatment and did not have needles for strictly personal use or single-use needles</li>
+    <li>If you have been cut with potentially contaminated objects (through sharing razor blades, for example)</li>
+    <li>If you have had prolonged contact with a damaged skin contaminated with secretions or blood</li>
+    <li>If you have been injured with a dirty needle'</li>
+    <li>In case of a human bite</li>
+    <li>After surgery or endoscopic evaluation</li>
+    </ol>
+  </h4>
+  
             </p>
           </div>
         </div>
