--- a/how_it_works.html
+++ b/how_it_works.html
@@ -31,15 +31,16 @@
             <h2>How the app works</h2>
             <hr>
             <p class="text-justify">
-              Install the app onto your mobile devices.
-              At the first launch, the app will promt you to login with your google account and password.
-              If you already have an account contunie with login, if not create an account wth the MUSAYI APP.
+              Install the app to your mobile device.
+              On use for the first time, the app will prompt you to login with your google account.
+              The app will prompt you to click on the google account associated with your phone to to sign in with one...
+              This is only done to make sure real people are creating accounts not random unserious people.
             </p>
             <p class="text-justify">
               Incase you donot have a google account u can use the link blow to get help on how to create one then sign
-              up fpr the app<a target="_blank" href='https://support.google.com/accounts/answer/27441?hl=en'> Create
+              in for the app<a target="_blank" href='https://support.google.com/accounts/answer/27441?hl=en'> Create
                 Google Account</a>.
-              Please only enter corret information because it can lead to lose of lives in case of errors.
+              Please only enter correct information.
             </p>
             <p class="text-justify">
               Once the information is entered, SignUp.
