--- a/advice.html
+++ b/advice.html
@@ -11,29 +11,29 @@
 
 <p class="text-small-margin">
               
-  <h1>
-   <p> WHO CAN DONATE BLOOD ?</p>
-      <ol>
+  <h1><p> WHO CAN DONATE BLOOD ?</p></h1>
+      <ul>
         <li>Must be in good general health</li>
         <li>Must be at least 18 years old and no more than 65. After the age of 60, donors require the approval of a transfusion medicine physician</li>
         <li>Must weight at least 50 kg</li>
         <li>Must not be at risk of transmitting blood-borne diseases</li>
-        <li><ol>
+        <br>
+        <li><ul>
           <p>Must have a hemoglobin or hematocrit level of</p>
           <li>o 13.5-18 g/dl (0.40%) for a man</li>
           <li>o 12.5-16 g/dl (0.38%) for a woman</li>
-          </ol>
+          </ul>
         </li>
+        <br>
         <li>Must have a systolic blood pressure of 100-140 mmHg and a diastolic blood pressure of 60-90 mmHg</li>
         <li>Must have a pulse rate of 60-100 bpm (beats per minute)</li>
         <li>Must have a temperature below 37.6°C</li>
         <li>Must have a platelet count above 150x109/L</li>
-    </ol>
-  </h1>
+    </ul>
   
-  <h2>
-    <p> WHO IS LIKELY NOT ELIGIBLE TO DONATE BLOOD ?</p>
-    <ol>
+  
+  <h2><p> WHO IS LIKELY NOT ELIGIBLE TO DONATE BLOOD ?</p></h2>
+    <ul>
         <li>You have ever taken drugs</li>
         <li>Your partner takes drugs</li>
         <li>You are HIV positive</li>
@@ -41,20 +41,18 @@
         <li>Your partner is HIV positive</li>
         <li>You have more than one sexual partner</li>
         <li>You think your partner has risky sex</li>
-    </ol>
-  </h2>
+    </ul>
   
-  <h3>
-    <p> WAIT FOR 6 MONTHS IF....</p>
-    <ol>
+  
+  <h3><p> WAIT FOR 6 MONTHS IF....</p></h3>
+    <ul>
         <li>You have casual partners</li>
         <li>You have changed sexual partners</li>
-    </ol>
-  </h3>
+    </ul>
   
-  <h4>
-    <p>WAIT FOR 12 MONTHS IF......</p>
-    <ol>
+  
+  <h4><p>WAIT FOR 12 MONTHS IF......</p></h4>
+    <ul>
      <li>After a tattoo or ear/body piercing</li>
     <li>After a scarification (except if therapeutic)</li>
     <li>If you have undergone an acupuncture treatment and did not have needles for strictly personal use or single-use needles</li>
@@ -63,8 +61,8 @@
     <li>If you have been injured with a dirty needle'</li>
     <li>In case of a human bite</li>
     <li>After surgery or endoscopic evaluation</li>
-    </ol>
-  </h4>
+    </ul>
+  
   
             </p>
           </div>
