--- a/advice.html
+++ b/advice.html
@@ -7,8 +7,8 @@
 <!-- Latest compiled JavaScript -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script> 
   </head>
-<body>
-
+<body class="text-center">
+<p>WHAT YOU MAY NEED TO KNOW </p>
 <p class="text-small-margin">
               
   <h1><p> WHO CAN DONATE BLOOD ?</p></h1>
