--- a/advice.html
+++ b/advice.html
@@ -7,7 +7,7 @@
 <!-- Latest compiled JavaScript -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script> 
   </head>
-<body class="text-center">
+<body class="container">
 <p>WHAT YOU MAY NEED TO KNOW </p>
 <p class="text-small-margin">
               
