--- a/advice.html
+++ b/advice.html
@@ -19,7 +19,7 @@ body {
   </head>
 <body class="container">
   
-<p class="display-1" class="text-center ">WHAT YOU MAY NEED TO KNOW </p>
+  <p class="display-2" class="text-center "><b>FREQUENTLY ASKED QUESTIONS</b></p>
   
 <p class="text-small-margin">
               
