--- a/advice.html
+++ b/advice.html
@@ -24,7 +24,7 @@ body {
 <p>
               
   <h1><p> WHO CAN DONATE BLOOD ?</p></h1>
-      <ul>
+      <ul><p><One:<p>
         <li>Must be in good general health</li>
         <li>Must be at least 18 years old and no more than 65. After the age of 60, donors require the approval of a transfusion medicine physician</li>
         <li>Must weight at least 50 kg</li>
@@ -44,8 +44,8 @@ body {
     </ul>
   
   
-  <h2><p> WHO IS LIKELY NOT ELIGIBLE TO DONATE BLOOD ?</p></h2>
-    <ul>
+  <h2><p> WHO IS NOT ELIGIBLE TO DONATE BLOOD ?</p></h2>
+  <ul><p>If</p>
         <li>You have ever taken drugs</li>
         <li>Your partner takes drugs</li>
         <li>You are HIV positive</li>
@@ -74,8 +74,9 @@ body {
     <li>In case of a human bite</li>
     <li>After surgery or endoscopic evaluation</li>
     </ul>
-  
-  
+  <h3>
+  <a href="index.html" target="_blank">HOME</a> 
+    </h3>
             </p>
           </div>
         </div>
