--- a/advice.html
+++ b/advice.html
@@ -75,7 +75,7 @@ body {
     <li>After surgery or endoscopic evaluation</li>
     </ul>
   <h3>
-  <a href="index.html" target="_blank">HOME</a> 
+  <a href="index.html" target="_self">HOME</a> 
     </h3>
             </p>
           </div>
