--- a/advice.html
+++ b/advice.html
@@ -74,8 +74,9 @@ body {
     <li>In case of a human bite</li>
     <li>After surgery or endoscopic evaluation</li>
     </ul>
+  <br>
   <h3>
-  <a href="index.html" target="_self">HOME</a> 
+  <a href="index.html" target="_self">GO BACK HOME</a> 
     </h3>
             </p>
           </div>
