--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="js/menu.js"></script>
+   <!-- Latest compiled and minified CSS -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
+
+<!-- Latest compiled JavaScript -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script> 
   <style>
     .menu-index {
       color: rgb(255, 255, 255) !important;
@@ -21,7 +26,8 @@
   </style>
 </head>
 
-<body>
+<body class="container">
+  
   <div class="menu-container"></div>
   <div class="content-container">
     <div class="banner" style="background: url('img/1.jpg') no-repeat center; background-size: cover; height: 200px;">
@@ -61,13 +67,13 @@
         </div>
         <div class="flex-row">
           <div class="flex-item flex-column">
-            <h2>Problem Statement</h2>
+            <h2>PROBLEM STATEMENT</h2>
             <hr>
             <p class="text">
               <span>So many people are losing their lives due to blood shortage in hospitals.</span> 
             </p>
             <hr>
-            <h2>Background</h2>
+            <h2>BACKGROUND</h2>
             <p class="text">
               Every year, thousands of Ugandans are affected by severe malaria, women bleeding after delivery, sickle cell
               anemia, traffic accidents, and other medical issues that demand blood transfusions. However, only
@@ -83,7 +89,7 @@
               a result of the ongoing Covid 19 crisis, which made blood donation much more difficult owing to the
               inability to travel freely, as well as government limitations imposed to curb the spread of Covid 19.
             </p>
-            <h2>Solution </h2>
+            <h2>SOLUTION</h2>
             <p class="text">
               While the current blood shortage may not be a new thing in the country,it appears that the issue may
               worsen if no action is taken. For this reason we decided to develop A blood donation app that connects
