--- a/menu.html
+++ b/menu.html
@@ -8,10 +8,10 @@
     </a>
     <div class="menu-items flex-row-center flex-item">
       <a href="index.html" class="menu-index">OVERVIEW</a>
-      <a href="advice.html" class="menu-index">PRECAUTIONS</a>
       <a href="how_it_works.html" class="menu-widget">HOW THE APP WORKS</a>
       <a href="https://github.com/musayi-app/musayi-app.github.io" target="_self" >GITHUB</a>
       <a href="APP_DATA/">APP LANDING SITE</a>
+      <a href="advice.html" class="menu-index">FAQs</a>
     </div>
   </div>
 </div>
